crates/function-metrics/tests/ui/fail/empty_metrics.rs
use function_metrics::function_metrics;

#[function_metrics(metrics())]
fn empty() {}

fn main() {}
